# ai_trend_analyzer

./: .replit  app.py  config.py  main.py  manual_data_collection.py  models.py  pyproject.toml  regenerate_descriptions.py  routes.py  run_full_pipeline.py  run_scheduler.py  scheduler.py  start_scheduler.sh  test_app.py  test_data_collection.py  test_phase2_architecture.py  test_real_collection.py  test_scheduler.py
.reqs/: PRD.md  openai_qa.md  qa.md  tasks.md
attached_assets/: AI Trend Analyzer PRD_1750444231039.md  Pasted-Below-are-responses-to-your-questions-nestled-under-each-question-prefixed-by-Technical-Qu-1750447515881_1750447515883.txt  Pasted-Search-Recent-search-Returns-Posts-from-the-last-7-days-that-match-a-search-query-GET-2-tweets-1750597286879_1750597286880.txt  Pasted-X-API-v2-data-dictionary-Object-Model-Tweet-Tweets-are-the-basic-building-block-of-all-things-Tw-1750608225766_1750608225769.txt
routes/: __init__.py  health.py  main.py  performance.py
scripts/: README.md  create_historical_data.py  manual_data_collection.py  populate_sample_data.py  quick_regenerate_descriptions.py  regenerate_trend_descriptions.py  run_full_pipeline.py  test_content_generation.py  test_data_collection.py  test_end_to_end.py  test_phase2_architecture.py  test_phase2_interactive.py  test_phase3_performance.py  test_twitter_api.py  test_twitter_real_data.py
services/: content_generation_service.py  openai_service.py  performance_service.py  service_manager.py  trend_service.py  twitter_service.py
tasks/: background_tasks.py
templates/: base.html  index.html  (+1 more)
(+18 files in other folders)
