[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.24",
    "markdown>=3.8.2",
    "numpy>=2.3.0",
    "openai>=1.89.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.0",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
]
